# CS453FInal

./: CMakeLists.txt  README.md
data/: data_preprocess.py
data/scalar_data/: N010_scans.ply  N01_scans.ply  V010_scans.ply  V01_scans.ply
learnply/: LTS.cpp  LTS.h  data_preprocess.py  drawPoly.h  drawUtil.cpp  drawUtil.h  glError.h  ibfv.cpp  ibfv.h  icVector.H  learnply.cpp  ply.cpp  ply.h  ply_io.h  polyhedron.cpp  polyhedron.h  project1.cpp  project1.h  project2.cpp  project2.h  tmatrix.cpp  trackball.cpp
